# python_rep

./: README.md
calories_calculator/: .pylintrc  AddMealWindow.py  AddNewFoodWindow.py  EnterWindow.py  FilesTools.py  Input.py  ListFoodWindow.py  MainWindow.py  Meal.py  Nutrients.py  main.py  pyproject.toml  setupUi.py
calories_calculator/data/: data.json  user_data.json
calories_calculator/data/food_data/: 2024-06-02.json
calories_parser/: calories_parser.py
concepts/: attributes.ipynb  closures.ipynb  decorators.ipynb  init.py  regex.ipynb
concepts/package/: __init__.py  file1.py  file2.py
diploms_generator/: .pylintrc  excel_reader.py  main.py  pattern.json  pattern_builder.py  pyproject.toml  word.py  Сертификат.docx
diploms_generator/model/: __init__.py  excel_reader.py  model.py  pattern_builder.py  word_filler.py
diploms_generator/output/: .~lock.Иванову Сергею Викторовичу.docx#  Иванову Ивану очень крутой чел.docx  Иванову Сергею Викторовичу.docx  ИвановуИвану 1 очень крутой чел.docx
diploms_generator/tests/: .~lock.table.xlsx#  pattern.json  table.xlsx  Сертификат.docx
diploms_generator/ui/: image.py  prototype.py  prototype.ui  ui_objects.py
excel/statistics_1/: main.py  pyproject.toml  statistics.py  Расчетное задание №1.xlsx
geometry_dash/: .pylintrc  pyproject.toml
geometry_dash/geometry/: Game.py  Header.py  Level.py  LevelButton.py  MenuButton.py  main.py
geometry_dash/geometry/user/: levels.db
geometry_dash/levels/: BACK ON TRACK.csv  STEREO MADNESS.csv
weather_forecast/: .pylintrc  main.py
weather_forecast/data/: user_data.json
yandex_cloud_translate/: README.md  translate.py
