[tool.poetry]
name = "calories-calculator"
version = "1"
description = ""
authors = ["Zahar Chernenko <zaharchernenko35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt5-qt5 = "^5.15.2"
pyqt5 = "^5.15.10"
pylint = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
